<resources>
    <string name="app_name">HzOpenglEs</string>
    <string name="main_button_sg">基本图形</string>
    <string name="main_button_bitmap">图像处理</string>
    <string name="main_button_fbo">FBO</string>
    <string name="simple_button_sg">三角形</string>
    <string name="simple_button_tg">正方形</string>
    <string name="simple_button_cr">圆形</string>
    <string name="simple_button_cb">立方体</string>
    <string name="simple_button_cn">圆锥体</string>
    <string name="simple_button_cl">圆柱体</string>
    <string name="simple_button_sp">球体</string>
    <string name="simple_button_dice">骰子</string>

    <string name="url">网上找到的各个模式的计算公式：\n http://www.360doc.com/content/14/0808/13/636843_400316996.shtml</string>

    <string-array name="spinner">
        <item>亮度</item>
        <item>普通混合</item>
        <item>柔光混合</item>
    </string-array>
</resources>
