<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <Button
        android:id="@+id/triangle"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="100dp"
        android:text="@string/simple_button_sg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/square"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:text="@string/simple_button_tg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/triangle" />

    <Button
        android:id="@+id/circul"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:text="@string/simple_button_cr"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/square" />

    <Button
        android:id="@+id/cube"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:text="@string/simple_button_cb"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/circul" />

    <Button
        android:id="@+id/cone"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:text="@string/simple_button_cn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cube" />

    <Button
        android:id="@+id/cylinder"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:text="@string/simple_button_cl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cone" />

    <Button
        android:id="@+id/sphere"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:text="@string/simple_button_sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cylinder" />

    <Button
        android:id="@+id/dice"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:text="@string/simple_button_dice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sphere" />

</androidx.constraintlayout.widget.ConstraintLayout>
